kubectl-ms-user/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: users
  name: users
spec:
  type: loadBalancer
  ports:
    - name: "http"
      port: 3002
      targetPort: 3002
  selector:
    io.kompose.service: users
status:
  loadBalancer: {}
