kubectl-ms-user/ms-user-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ms-user
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ms-user: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ms-user: "true"
